--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 <div class="container">
   <div class="row">
     <div class="col btn">
-    <button class="button-74"　id="btn_no">ヤダ</button>
+    <button id="btn_no" class="button-74">ヤダ</button>
     <audio id="play_no" preload="auto">
         <source src="no.wav" type="audio/wav">
     </audio>
     </div>
     <div class="col btn">
-      <button class="button-74"　id="btn_what">ナニ</button>
+      <button id="btn_what" class="button-74">ナニ</button>
       <audio id="play_what" preload="auto">
           <source src="what.wav" type="audio/wav">
       </audio>
@@ -33,13 +33,13 @@
   </div>
   <div class="row">
     <div class="col btn">
-      <button class="button-74" id="btn_okay">ﾃﾞﾓﾀﾞｲｼﾞｮｳﾌﾞ~!</button>
+      <button id="btn_okay" class="button-74">ﾃﾞﾓﾀﾞｲｼﾞｮｳﾌﾞ~!</button>
       <audio id="play_okay" preload="auto">
           <source src="okay.wav" type="audio/wav">
       </audio>
       </div>
     <div class="col btn">
-      <button class="button-74" id="btn_ouch">ｱｧｰｲｯﾀｲ!</button>
+      <button id="btn_ouch" class="button-74">ｱｧｰｲｯﾀｲ!</button>
       <audio id="play_ouch" preload="auto">
           <source src="ouch.wav" type="audio/wav">
       </audio>
@@ -53,6 +53,7 @@
 </div>
 
   <footer class=footer> audio playing tool for personal use only </footer>
+
 </body>
 
 </html>
