--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class=header>音声再生 簡易webアプリ</header>
 
 <div class="container">
-  <div class="row">
+  <div class="row seg">
     <div class="col btn">
     <button id="btn_no" class="button-74">ヤダ</button>
     <audio id="play_no" preload="auto">
@@ -31,7 +31,7 @@
       </audio>
     </div>
   </div>
-  <div class="row">
+  <div class="row seg">
     <div class="col btn">
       <button id="btn_okay" class="button-74">ﾃﾞﾓﾀﾞｲｼﾞｮｳﾌﾞ~!</button>
       <audio id="play_okay" preload="auto">
@@ -45,7 +45,7 @@
       </audio>
     </div>
   </div>
-  <div class="row">
+  <div class="row seg">
     <div class="col btn">
       <button class="button-74" onclick="randomplay( playlist )">ランダム</button>
     </div>
