adjust sound volume
音量の調整

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="col btn">
     <button id="btn_no" class="button-74">ヤダ</button>
     <audio id="play_no" preload="auto">
-        <source src="no.wav" type="audio/wav">
+        <source src="no2.wav" type="audio/wav">
     </audio>
     </div>
     <div class="col btn">
       <button id="btn_what" class="button-74">ナニ</button>
       <audio id="play_what" preload="auto">
-          <source src="what.wav" type="audio/wav">
+          <source src="what2.wav" type="audio/wav">
       </audio>
     </div>
   </div>
@@ -35,13 +35,13 @@
     <div class="col btn">
       <button id="btn_okay" class="button-74">ﾃﾞﾓﾀﾞｲｼﾞｮｳﾌﾞ~!</button>
       <audio id="play_okay" preload="auto">
-          <source src="okay.wav" type="audio/wav">
+          <source src="okay2.wav" type="audio/wav">
       </audio>
       </div>
     <div class="col btn">
       <button id="btn_ouch" class="button-74">ｱｧｰｲｯﾀｲ!</button>
       <audio id="play_ouch" preload="auto">
-          <source src="ouch.wav" type="audio/wav">
+          <source src="ouch2.wav" type="audio/wav">
       </audio>
     </div>
   </div>
